--- a/transforming-streams/build.gradle
+++ b/transforming-streams/build.gradle
@@ -4,16 +4,13 @@ buildscript {
   }
   dependencies {
     classpath 'com.commercehub.gradle.plugin:gradle-avro-plugin:0.15.1'
-    classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
-    classpath "com.avast.gradle:gradle-docker-compose-plugin:0.12.1"
+    classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.2'
   }
 }
 
 plugins {
-  id 'com.google.cloud.tools.jib' version '2.1.0'
+  id 'com.google.cloud.tools.jib' version '1.1.1'
 }
-
-apply plugin: 'docker-compose'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -24,18 +21,15 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 dependencies {
   implementation "org.apache.avro:avro:$avroVersion"
-  implementation 'org.slf4j:slf4j-simple:1.7.28'
+  implementation 'org.slf4j:slf4j-simple:1.7.26'
+  implementation "org.apache.kafka:kafka-streams:$kafkaVersion"
   implementation "io.confluent:kafka-streams-avro-serde:$confluentVersion"
-  testImplementation "org.testcontainers:testcontainers:$testContainersVersion"
-  testImplementation "org.testcontainers:kafka:$testContainersVersion"
-  testImplementation("com.github.gAmUssA:testcontainers-java-module-confluent-platform:master-SNAPSHOT") {
-    exclude group: "ch.qos.logback", module: "logback-classic"
-  }
-
+  testImplementation "org.apache.kafka:kafka-streams-test-utils:$kafkaVersion"
+  testImplementation 'junit:junit:4.12'
 }
 
 task run(type: JavaExec) {
-  main = 'io.confluent.developer.TransformEvents'
+  main = 'io.confluent.developer.TransformStream'
   classpath = sourceSets.main.runtimeClasspath
   args = ['configuration/dev.properties']
 }
@@ -44,12 +38,12 @@ jar {
   manifest {
     attributes(
         'Class-Path': configurations.compileClasspath.collect { it.getName() }.join(' '),
-        'Main-Class': 'io.confluent.developer.TransformEvents'
+        'Main-Class': 'io.confluent.developer.TransformStream'
     )
   }
 }
 
 shadowJar {
-  archiveBaseName = "kafka-transforming-standalone"
+  archiveBaseName = "kstreams-transform-standalone"
   archiveClassifier = ''
 }
