--- a/transforming-streams/configuration/test.properties
+++ b/transforming-streams/configuration/test.properties
@@ -1,6 +1,6 @@
-confluent.version=5.5.0
-bootstrap.servers=localhost:29092
-schema.registry.url=http://localhost:8081
+application.id=transforming-app
+bootstrap.servers=127.0.0.1:29092
+schema.registry.url=mock://mocked-schema-registry:8081
 
 input.topic.name=raw-movies
 input.topic.partitions=1
@@ -9,3 +9,4 @@ input.topic.replication.factor=1
 output.topic.name=movies
 output.topic.partitions=1
 output.topic.replication.factor=1
+
