--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ before_install:
 
 install:
   - ./gradlew build
-  - cd transforming-ksqldb && ./startClieService.sh && ./runTests.sh
+  - cd transforming-ksqldb && ./startCliService.sh && ./runTests.sh
