--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,jetbrains,eclipse
 
+!transforming-ksqldb/src/statements.sql
